fixed navbar link bug caused due to z-index of .nav_ul

--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -13,6 +13,8 @@
 .nav_ul {
   float: right;
   margin-right: 20px;
+  background-color: rgb(255, 255, 255);
+  z-index: 3;
 }
 .nav_li {
   display: inline-block;
